--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "sass": "^1.56.2",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/brainhubeu__react-carousel": "^2.0.5"
