--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "sass": "^1.56.2",
+    "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.29.0",
+    "sass": "^1.57.1",
     "typescript": "4.9.3",
     "yarn": "^1.22.19"
   },
