--- a/.github/workflows/rm-pipeline.yml
+++ b/.github/workflows/rm-pipeline.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [12.22.12]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
