--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,7 +24,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
     - run: |
           if [ -e yarn.lock ]; then
           yarn install --frozen-lockfile
@@ -34,3 +33,5 @@ jobs:
           npm i
           fi
     - run: yarn run build
+    - run: pm2 delete "snap-website"
+    - run: pm2 start npm --name "snap-website" -- start
