--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/redux-saga": "^0.10.5",
+    "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
+    "country-codes-list": "^1.6.10",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "formik": "^2.2.9",
     "next": "13.0.6",
     "node-sass": "^8.0.0",
     "react": "18.2.0",
@@ -22,11 +26,15 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
+    "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.2",
     "sass": "^1.57.1",
     "typescript": "4.9.3",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@types/brainhubeu__react-carousel": "^2.0.5"
