--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/redux-persist": "^4.3.1",
     "@types/redux-saga": "^0.10.5",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
@@ -29,7 +31,7 @@
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
-    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.2",
     "sass": "^1.57.1",
     "typescript": "4.9.3",
