--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
+    "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "18.0.9",
     "@types/redux-persist": "^4.3.1",
     "@types/redux-saga": "^0.10.5",
@@ -25,6 +26,7 @@
     "node-sass": "^8.0.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
