--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
+    "@syncfusion/ej2-react-progressbar": "^20.4.48",
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
     "@types/react-calendar": "^3.9.0",
