--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,13 +24,13 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: |
-          if [ -e yarn.lock ]; then
-          yarn install --frozen-lockfile
-          elif [ -e package-lock.json ]; then
-          npm ci
-          else
-          npm i
-          fi
+#     - run: |
+#           if [ -e yarn.lock ]; then
+#           yarn install --frozen-lockfile
+#           elif [ -e package-lock.json ]; then
+#           npm ci
+#           else
+#           npm i
+#           fi
     - run: yarn run build
 #     - run: pm2 start npm --name "rm-website" -- start
