--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@syncfusion/ej2-react-progressbar": "^20.4.48",
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
+    "@types/react-avatar-editor": "^13.0.0",
     "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "18.0.9",
     "@types/redux-persist": "^4.3.1",
@@ -27,6 +28,7 @@
     "next": "13.0.6",
     "node-sass": "^8.0.0",
     "react": "18.2.0",
+    "react-avatar-editor": "^13.0.0",
     "react-bootstrap": "^2.7.0",
     "react-calendar": "^4.0.0",
     "react-dom": "18.2.0",
