--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.2.3",
     "country-codes-list": "^1.6.10",
     "country-state-city": "3.1.2",
+    "dayjs": "^1.11.7",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "formik": "^3.0.0-next.8",
