--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
+    "react-photo-gallery": "^8.0.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
