--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "formik": "^3.0.0-next.8",
+    "lightgallery": "^2.7.1",
     "lodash": "^4.17.21",
     "next": "13.0.6",
     "node-sass": "^8.0.0",
@@ -43,7 +44,6 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
-    "react-photo-gallery": "^8.0.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
