--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@types/react": "^18.0.28",
     "@types/react-avatar-editor": "^13.0.0",
     "@types/react-bootstrap": "^0.32.32",
-    "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "18.0.9",
     "@types/react-redux": "^7.1.25",
     "@types/redux-persist": "^4.3.1",
@@ -39,12 +38,12 @@
     "react": "18.2.0",
     "react-avatar-editor": "^13.0.0",
     "react-bootstrap": "^2.7.2",
-    "react-calendar": "^4.0.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
     "react-query": "^3.39.3",
+    "react-rainbow-components": "^1.32.0",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
