--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_URL = "http://15.206.226.127/api"
-NEXT_PUBLIC_IMAGE_URL = "http://15.206.226.127/api/uploads"
+NEXT_PUBLIC_URL = "https://beta.royalmatrimonial.com/api"
+NEXT_PUBLIC_IMAGE_URL = "https://beta.royalmatrimonial.com/api/uploads"
