--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
+    "react-otp-input": "^3.0.1",
     "react-query": "^3.39.3",
     "react-rainbow-components": "^1.32.0",
     "react-redux": "^8.0.5",
