--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.5",
     "@mui/x-date-pickers": "^6.0.2",
     "@reduxjs/toolkit": "^1.9.2",
     "@syncfusion/ej2-base": "^20.4.51",
